syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request.group";
option java_multiple_files = true;
option swift_prefix = "";

message DeleteGroupRequest {
    int64 group_id = 1;
}
